// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.hcp.v2;

// HCPConfig is used to configure the HCP SDK for communicating with
// the HashiCorp Cloud Platform
message HCPConfig {
  string auth_url = 1;
  string api_address = 2;
  string scada_address = 3;
  bool tls_insecure_skip_verify = 4;
}
